# recent-messages2

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  config.toml  grafana-dashboard.json  nginx.conf  recent-messages2.service
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  rust.yml  web.yml
deployments/: configmap.yaml  deployment.yaml  postgres-deployment.yaml
migrations/: V1__initial.sql  V2__authorization.sql  V4__timescaledb.sql  V5__columnstore.sql
migrations_main/: V3__messages.sql
scripts/: reformat.sh
src/: config.rs  db.rs  irc_listener.rs  main.rs  message_export.rs  migrate_messages.rs  monitoring.rs  shutdown.rs  system_monitoring.rs
src/web/: auth.rs  auth_endpoints.rs  auth_middleware.rs  error.rs  get_metrics.rs  get_recent_messages.rs  ignored.rs  mod.rs  purge.rs  record_metrics.rs  timeout.rs
web/: .gitignore  README.md  config.js  config.ts  index.html  main.scss  nginx-example.conf  package-lock.json  package.json  tsconfig.json
web/src/: index.tsx  login.tsx  nav.tsx  settings.tsx  static.tsx
web/static/: publickey.ruben.anders@robotty.de.asc
