[package]
name = "recent-messages2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/robotty/recent-messages2"
homepage = "https://recent-messages.robotty.de/"
keywords = ["twitch", "api", "irc", "chat"]
description = "Service to provide historical messages to Twitch chat clients"
categories = ["web-programming"]
readme = "README.md"
version = "0.1.0"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2"
env_logger = "0.9"
futures = "0.3"
http = "0.2"
humantime = "2"
humantime-serde = "1"
hyper = "0.14"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
metrics = "0.18"
metrics-exporter-prometheus = { version = "0.8", default-features = false }
mobc = { version = "0.7", features = ["tokio"] }
mobc-postgres = "0.7"
rand = "0.8"
refinery = { version = "0.8", features = ["tokio-postgres"] }
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "json"], default-features = false }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-process-stats = "1"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
toml = "0.5"
twitch-irc = { version = "4", features = ["transport-tcp", "transport-tcp-rustls-webpki-roots", "metrics-collection"], default-features = false }
warp = { git = "https://github.com/RAnders00/warp", branch = "v030-backports" }

[target.'cfg(unix)'.dependencies]
rlimit = "0.7"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "recent-messages2"
path = "src/main.rs"
