[package]
name = "recent-messages2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/robotty/recent-messages2"
homepage = "https://recent-messages.robotty.de/"
keywords = ["twitch", "api", "irc", "chat"]
description = "Service to provide historical messages to Twitch chat clients"
categories = ["web-programming"]
readme = "README.md"
version = "0.1.0"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-extra = { version = "0.3", features = ["spa"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.10"
derivative = "2"
futures = "0.3"
http = "0.2"
humantime = "2"
humantime-serde = "1"
hyper = { version = "0.14", features = ["full"] }
itertools = "0.10"
lazy_static = "1"
num_cpus = "1"
prometheus = { version = "0.13", default-features = false }
rand = "0.8"
refinery = { version = "0.8", features = ["tokio-postgres"] }
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "json"], default-features = false }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-process-stats = "1"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-stream = { version = "0.1", features = ["net"], default-features = false }
tokio-util = "0.7"
toml = "0.5"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twitch-irc = { git = "https://github.com/robotty/twitch-irc-rs", branch = "metrics-rework", features = ["transport-tcp", "transport-tcp-rustls-webpki-roots", "metrics-collection"], default-features = false }

[patch.crates-io]
# see https://github.com/heim-rs/darwin-libproc/issues/4
darwin-libproc = { git = "https://github.com/Orycterope/darwin-libproc", rev = "f73ddb1002d51ae74c1b41670fae56bd5896b7a3" }

[target.'cfg(unix)'.dependencies]
rlimit = "0.7"
hyperlocal = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "recent-messages2"
path = "src/main.rs"

[[bin]]
name = "recent-messages2-migrate-messages"
path = "src/migrate_messages.rs"
