[package]
name = "recent-messages2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/robotty/recent-messages2"
homepage = "https://recent-messages.robotty.de/"
keywords = ["twitch", "api", "irc", "chat"]
description = "Service to provide historical messages to Twitch chat clients"
categories = ["web-programming"]
readme = "README.md"
version = "0.1.0"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
edition = "2024"
rust-version = "1.94"
default-run = "recent-messages2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
derivative = "2"
futures = "0.3"
http = "1"
humantime = "2"
humantime-serde = "1"
hyper = { version = "1", features = ["full"] }
itertools = "0.14"
num_cpus = "1"
prometheus = { version = "0.14", default-features = false }
rand = "0.10"
refinery = { version = "0.9", features = ["tokio-postgres"] }
regex = "1"
reqwest = { version = "0.13", features = ["rustls", "json", "query"], default-features = false }
rmp-serde = "1"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-process-stats = "1"
structopt = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
# pinned to 0.7.14 because of https://github.com/rust-postgres/rust-postgres/issues/1284
tokio-postgres = { version = "=0.7.14", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.14"
tokio-stream = { version = "0.1", features = ["net"], default-features = false }
tokio-util = "0.7"
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twitch-irc = { version = "6" , features = ["transport-tcp", "transport-tcp-rustls-native-roots", "metrics-collection"], default-features = false }
rustls-platform-verifier = "0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[patch.crates-io]
# see https://github.com/heim-rs/darwin-libproc/issues/4
darwin-libproc = { git = "https://github.com/Orycterope/darwin-libproc", rev = "f73ddb1002d51ae74c1b41670fae56bd5896b7a3" }

[target.'cfg(unix)'.dependencies]
rlimit = "0.11"

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "recent-messages2"
path = "src/main.rs"

[[bin]]
name = "recent-messages2-migrate-messages"
path = "src/migrate_messages.rs"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
